sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:2: error: Missing closing brace `}' assumed here
def cocktailSort() {
^AlgCocktailSort2:2: error: expected class or object definition
def cocktailSort() {
^